--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
 </head>
 
 <body>
+        <!-- HAMBURGER MENU -->
+        <div class="hamburger-container">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
+    
+        <div class="menu-expanded">
+            <ul>
+                <li class="menu-link"><a href="#"><img src="images/Tomniscient-Logo-Metallic.png"></a></li>
+                <li class="menu-link"><a href="#latest-news-section">Latest News</a></li>
+                <li class="menu-link"><a href="#about-section">About</a></li>
+                <li class="menu-link"><a href="#releases-section">Releases</a></li>
+                <li class="menu-link"><a href="#merch-section">Merch</a></li>
+                <li class="menu-link"><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+
     <section class="header-section">
         <div class="logo"><img class="logo-img" src="images/Tomniscient-Logo-Metallic.png" alt=""></div>
     </section>
