--- a/index.html
+++ b/index.html
@@ -181,22 +181,22 @@
         <div class="carousel-container fade-in">
             <div class="carousel">
                 <div class="slide">
-                    <img src="images/merch/beanie.jpg">
+                    <img src="images/merch/t-shirt.jpg">
                 </div>
                 <div class="slide">
-                    <img src="images/merch/hoodie.jpg">
+                    <img src="images/merch/hoodie-new.jpg">
                 </div>
 
                 <div class="slide">
-                    <img src="images/merch/joggers.jpg">
+                    <img src="images/merch/tote-bag.jpg">
                 </div>
                 <div class="slide">
-                    <img src="images/merch/mustard-shirt.jpg">
+                    <img src="images/merch/cap.jpg">
                 </div>
                 <div class="slide">
-                    <img src="images/merch/teal-shirt.jpg">
+                    <img src="images/merch/sweatshirt.jpg">
                 </div>
-                <div class="slide">
+                <!-- <div class="slide">
                     <img src="images/merch/tank-top.jpg">
                 </div>
                 <div class="slide">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="slide">
                     <img src="images/merch/case.jpg">
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
