Add social icons to menu and contact

--- a/index.html
+++ b/index.html
@@ -28,14 +28,24 @@
             <li class="menu-link"><a href="#about-section">About</a></li>
             <li class="menu-link"><a href="#releases-section">Releases</a></li>
             <li class="menu-link"><a href="#merch-section">Merch</a></li>
-            <li class="menu-link"><a href="#contact">Contact</a></li>
+            <li class="menu-link"><a href="#contact-section">Contact</a></li>
         </ul>
+        <div class="menu-social-icons">
+            <a href="#" target="_blank"><i class="fa-brands fa-spotify"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-apple"></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-bandcamp"></i></a>
+        </div>
     </div>
 
     <header>
         <div class="header-section">
+            <div class="top-left-social-icons">
+                <a href="#" target="_blank"><i class="fa-brands fa-spotify"></i></a>
+                <a href="#" target="_blank"><i class="fa-brands fa-apple"></i></a>
+                <a href="#" target="_blank"><i class="fa-brands fa-bandcamp"></i></a>
+            </div>
             <div class="logo"><img src="images/Tomniscient-Logo-Metallic.png" alt="Tomniscient Logo"></div>
-            
+
         </div>
     </header>
 
@@ -199,6 +209,31 @@
             </div>
         </div>
     </section>
+
+    <!-- CONTACT CONTAINER -->
+    <section id="contact-section">
+        <div class="contact-container">
+            <h2>Contact</h2>
+            <form action="">
+                <div class="label-input-container">
+                    <label for="name">Name:</label>
+                    <input type="text" name="name" id="name" required autocomplete="false">
+                </div>
+                <div class="label-input-container">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="Email" required autocomplete="false">
+                </div>
+                <div class="label-input-container">
+                    <label for="message">Message:</label>
+                    <textarea name="message" id="message" cols="30" rows="10" required autocomplete="false"></textarea>
+                </div>
+                <button type="submit">Submit</button>
+
+            </form>
+        </div>
+    </section>
+
+     <!-- FOOTER CONTAINER -->
     <footer class="fade-in">
         <img src="images/Tomniscient-Metal.png">
         <div class="social-icons">
