Add credits and change h2 padding top

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="menu-expanded">
-        
+
         <ul>
             <li class="menu-link"><a href="#"><img src="images/Tomniscient-Logo-Metallic.png"></a></li>
             <li class="menu-link"><a href="#latest-news-section">Latest News</a></li>
@@ -30,11 +30,13 @@
             <li class="menu-link"><a href="#releases-section">Releases</a></li>
             <li class="menu-link"><a href="#merch-section">Merch</a></li>
             <li class="menu-link"><a href="#contact-section">Contact</a></li>
-            <li>        <div class="menu-social-icons">
-                <a href="#" target="_blank"><i class="fa-brands fa-spotify"></i></a>
-                <a href="#" target="_blank"><i class="fa-brands fa-apple"></i></a>
-                <a href="#" target="_blank"><i class="fa-brands fa-bandcamp"></i></a>
-            </div></li>
+            <li>
+                <div class="menu-social-icons">
+                    <a href="#" target="_blank"><i class="fa-brands fa-spotify"></i></a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-apple"></i></a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-bandcamp"></i></a>
+                </div>
+            </li>
         </ul>
     </div>
 
@@ -183,7 +185,7 @@
     <section id="merch-section">
         <h2 class="fade-in">Merch</h2>
         <div class="carousel-title fade-in">
-            <h3>Apparel</h3>
+            <h3>Visit Store</h3>
             <div class="carousel-btn-container">
                 <button class="prev-button"><i class="fa-solid fa-chevron-left"></i></button>
                 <button class="next-button"><i class="fa-solid fa-chevron-right"></i></button>
@@ -234,7 +236,7 @@
         </div>
     </section>
 
-     <!-- FOOTER CONTAINER -->
+    <!-- FOOTER CONTAINER -->
     <footer class="fade-in">
         <img src="images/Tomniscient-Metal.png">
         <div class="social-icons">
@@ -244,6 +246,7 @@
         </div>
         <div class="copyright-container">
             <p>&#169; Copyright Tomniscient <span class="year"></span>. All rights reserved.</p>
+            <p class="credit">Logo design by <a href="#" target="_blank">Matt Hughes</a></p>
             <p class="credit">Website design by <a href="https://chrisratsabout.com/" target="_blank">Chris
                     Ratsabout</a></p>
         </div>
