--- a/index.html
+++ b/index.html
@@ -110,18 +110,11 @@
         <h2 class="fade-in">About</h2>
         <div class="about-container">
             <div class="about-text-container fade-in">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum debitis mollitia delectus, sequi
-                    doloremque ipsa! Aspernatur vel adipisci, dicta delectus dolore, temporibus provident corporis
-                    maiores eius laboriosam ad mollitia accusantium ducimus cumque itaque est id ipsam? Iure veniam
-                    quibusdam commodi numquam debitis omnis at explicabo, ullam dolor doloremque perferendis eaque?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum debitis mollitia delectus, sequi
-                    doloremque ipsa! Aspernatur vel adipisci, dicta delectus dolore, temporibus provident corporis
-                    maiores eius laboriosam ad mollitia accusantium ducimus cumque itaque est id ipsam? Iure veniam
-                    quibusdam commodi numquam debitis omnis at explicabo, ullam dolor doloremque perferendis eaque?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum debitis mollitia delectus, sequi
-                    doloremque ipsa! Aspernatur vel adipisci, dicta delectus dolore, temporibus provident corporis
-                    maiores eius laboriosam ad mollitia accusantium ducimus cumque itaque est id ipsam? Iure veniam
-                    quibusdam commodi numquam debitis omnis at explicabo, ullam dolor doloremque perferendis eaque?</p>
+                <h3>INDUSTRIAL DEMON DEATH MUSIC</h3>
+                <p>
+                    < Warning: NOT easy listening.>
+                        ..::Prepare thyself for transformation::..
+                </p>
             </div>
             <div class="outer-carousel-container">
                 <div class="carousel-container">
@@ -150,27 +143,9 @@
         <div class="releases-card-container">
             <div class="release-card release">
                 <a href="#" target="_blank">
-                    <img src="images/Tomniscient-Black.jpg">
+                    <img src="images/ep-cover.jpg">
                 </a>
-                <i>Album</i>
-                <p>(2024)</p>
-                <a class="release-listen-btn" href="#" target="_blank">Listen
-                    Here</a>
-            </div>
-            <div class="release-card release">
-                <a href="#" target="_blank">
-                    <img src="images/Tomniscient-White.jpg">
-                </a>
-                <i>Album</i>
-                <p>(2024)</p>
-                <a class="release-listen-btn" href="#" target="_blank">Listen
-                    Here</a>
-            </div>
-            <div class="release-card release">
-                <a href="#" target="_blank">
-                    <img src="images/Tomniscient-Snake.jpg">
-                </a>
-                <i>Album</i>
+                <i>Tomniscient</i>
                 <p>(2024)</p>
                 <a class="release-listen-btn" href="#" target="_blank">Listen
                     Here</a>
