--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <a href="#" target="_blank">
                     <img src="images/ep-cover.jpg">
                 </a>
-                <i>Tomniscient</i>
+                <i class="release-name">Tomniscient</i>
                 <p>(2024)</p>
                 <a class="release-listen-btn" href="#" target="_blank">Listen
                     Here</a>
