change latest news

--- a/index.html
+++ b/index.html
@@ -60,18 +60,17 @@
         <h2 class="fade-in">Latest News</h2>
         <div class="latest-news-card-container">
             <div class="latest-news-card fade-in">
-                <img src="images/Tomniscient-Snake.jpg" alt="">
-                <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                <img src="images/ep-cover.jpg" alt="">
+                <h3>Self-Titled EP</h3>
                 <div class="date-container">
                     <i class="fa-regular fa-calendar"></i>
-                    <p>February 9, 2024</p>
+                    <p>September 15, 2024</p>
                 </div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi quia, error delectus sit quam
-                    laborum. Omnis odio similique obcaecati tenetur vel officiis mollitia cum amet ipsum inventore
-                    explicabo dolore labore ducimus minus totam ea culpa, nobis, quis porro unde reiciendis dolorum!
-                    Repellat magnam ducimus sit ea quibusdam eaque, recusandae in.</p>
+                <p>COMING SOON</p>
             </div>
-            <div class="latest-news-card fade-in-2">
+
+
+            <!-- <div class="latest-news-card fade-in-2">
                 <img src="images/Tomniscient-Black.jpg" alt="">
                 <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                 <div class="date-container">
@@ -83,8 +82,8 @@
                     laborum. Omnis odio similique obcaecati tenetur vel officiis mollitia cum amet ipsum inventore
                     explicabo dolore labore ducimus minus totam ea culpa, nobis, quis porro unde reiciendis dolorum!
                     Repellat magnam ducimus sit ea quibusdam eaque, recusandae in.</p>
-                <!-- <a class="listen-btn" href="https://delaura.bandcamp.com/album/the-mirror-lie" target="_blank">Listen
-                    Here</a> -->
+                <a class="listen-btn" href="https://delaura.bandcamp.com/album/the-mirror-lie" target="_blank">Listen
+                    Here</a>
             </div>
             <div class="latest-news-card fade-in-3">
                 <img src="images/Tomniscient-White.jpg" alt="">
@@ -97,8 +96,12 @@
                     laborum. Omnis odio similique obcaecati tenetur vel officiis mollitia cum amet ipsum inventore
                     explicabo dolore labore ducimus minus totam ea culpa, nobis, quis porro unde reiciendis dolorum!
                     Repellat magnam ducimus sit ea quibusdam eaque, recusandae in.</p>
-                <!-- <a class="listen-btn" href="https://delaura.bandcamp.com/album/cruisin" target="_blank">Listen Here</a> -->
-            </div>
+                <a class="listen-btn" href="https://delaura.bandcamp.com/album/cruisin" target="_blank">Listen Here</a>
+                
+            </div> -->
+
+
+
         </div>
     </section>
 
@@ -145,7 +148,7 @@
                 <a href="#" target="_blank">
                     <img src="images/ep-cover.jpg">
                 </a>
-                <i class="release-name">Tomniscient</i>
+                <i class="release-name">Tomniscient EP</i>
                 <p>(2024)</p>
                 <a class="release-listen-btn" href="#" target="_blank">Listen
                     Here</a>
